@@ -1,0 +1,11 @@
+#ifndef _DSHOW_H
+#define _DSHOW_H
+#if __GNUC__ >=3
+#pragma GCC system_header
+#endif
+
+#include <evcode.h>
+#include <audevcod.h>
+#include <dvdevcod.h>
+
+#endif
